gcc/testsuite/rust/rustc/ui/object-safety/assoc_type_bounds_implicit_sized_dg.rs
//@ run-rustfix
#![allow(dead_code)]
trait TraitWithAType {
    type Item;
}
trait Trait {}
struct A {}
impl TraitWithAType for A {
    type Item = dyn Trait; // { dg-error ".E0277." "" { target *-*-* } }
}
fn main() {}

